fix(table): min-height to table max-height to dropdowns to fix overflow

--- a/packages/react/src/components/Table/TableHead/FilterHeaderRow/_filter-header-row.scss
+++ b/packages/react/src/components/Table/TableHead/FilterHeaderRow/_filter-header-row.scss
@@ -86,3 +86,10 @@
     padding-top: 0;
   }
 }
+
+.#{$prefix}--data-table
+  .#{$prefix}--table-header-label
+  .#{$prefix}--multi-select
+  .#{$prefix}--list-box__menu.#{$prefix}--list-box__menu {
+  max-height: var(--filter-header-dropdown-max-height);
+}
